--- a/Lesson3/styles.css
+++ b/Lesson3/styles.css
@@ -1,4 +1,17 @@
 /*Global styles*/
+.poiret-font{
+    font-family: 'Poiret One', cursive;
+}
+
+.kellyslab-font{
+    font-family: 'Kelly Slab', cursive;
+}
+
+.pompiere-font{
+    font-family: 'Pompiere', cursive;
+    font-size:20px;
+}
+
 header{
     text-align:center;
     color:white;
@@ -11,8 +24,10 @@ body{
 }
 
 h1{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-variant: small-caps;
+    text-shadow:5px 3px 5px lightgreen, 1px 1px 5px whitesmoke;
+    font-size:52px;
+    
 }
 
 h3{
